--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <h1 class="time" id="time"></h1>
     <div id="main"></div>
+    <ol id="quiz1"></ol>
+    <!--<button id="li1"></button>-->
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
