now the timer stops correctly

--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=-edge" />
-    <title>Document</title>
+    <title>Trout Bum Quiz</title>
   </head>
   <body>
+    <h1 class="trout quiz" id="adipose">Trout Knowledge Tester</h1>
     <button type="button" class="btn btn-primary" id="start">Start</button>
 
     <h1 class="time" id="time"></h1>
     <div id="main"></div>
+    <div id="name"></div>
+    <div id="yourScore"></div>
     <ol id="quiz1"></ol>
+    <form method="POST">
+      <div class="input-group" id ="initials">
+        <label for="email"></label>
+        
+      </div>
+      <div class="input-group" id="score">
+        <label for="password"></label>
+        
+      </div>
     <!--<button id="li1"></button>-->
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
