--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
     <button type="button" class="btn btn-primary" id="start">Start</button>
 
     <h1 class="time" id="time"></h1>
-    <div id="main"></div>
-    <div id="name"></div>
-    <div id="yourScore"></div>
-    <ol id="quiz1"></ol>
-    <form method="POST">
-      <div class="input-group" id ="initials">
-        <label for="email"></label>
-        
-      </div>
-      <div class="input-group" id="score">
-        <label for="password"></label>
-        
-      </div>
-    <!--<button id="li1"></button>-->
+    <h2 id="main"></h2>
+    <h2 class="title" id="title">Enter your Score and initials</h2>
+    <fieldset>
+      <legend>Insert Score and Initials</legend>
+      <input id="initials" type="text" placeholder="Enter your initials" />
+      <input id="score" type="text" placeholder="Enter your score" />
+      <button type="button" id="saveBtn">Save</button>
+    </fieldset>
+    <fieldset>
+      <legend>High Scores</legend>
+      <div id="lsOutput"></div>
+    </fieldset>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
